# yalx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ast.md  builtin.md  demo-arm64.s  demo.s  design.md  mach-o-format.md  nodes.md  runtime.md
libs/yalx/lang/: any.yalx  iterator.yalx  number.yalx  optional.yalx  print.yalx  string.yalx  throwing.yalx
libs/yalx/utils/: hashmap.yalx  list.yalx
src/arch/: label.h
src/arm64/: asm-arm64-test.cc  asm-arm64.cc  asm-arm64.h  const-arm64.h  instr-arm64.cc  instr-arm64.h
src/backend/: barrier-set.cc  barrier-set.h  code-generate-arch-test.cc  code-generate-arch-test.h  constants-pool-test.cc  constants-pool.cc  constants-pool.h  frame.cc  frame.h  gnu-asm-generator.cc  gnu-asm-generator.h  instruction-code.cc  instruction-code.h  instruction-selector-test.cc  instruction-selector-test.h  instruction-selector.cc  instruction-selector.h  instruction-test.cc  instruction.cc  instruction.h  linkage-symbols-test.cc  linkage-symbols.cc  linkage-symbols.h  machine-type.cc  machine-type.h  operand-allocator-test.cc  operand-allocator.cc  operand-allocator.h  register-allocator-test.cc  register-allocator.cc  register-allocator.h  registers-configuration.cc  registers-configuration.h  stackslot-allocator-test.cc  stackslot-allocator.cc  stackslot-allocator.h  zero-slot-allocator.cc  zero-slot-allocator.h
src/backend/arm64/: code-generate-arm64-test.cc  code-generate-arm64.cc  code-generate-arm64.h  instruction-codes-arm64.h  instruction-generating-arm64-test.cc  instruction-generating-arm64.cc  instruction-generating-arm64.h  instruction-selector-arm64-test.cc  instruction-selector-arm64.cc  issue-00-posix-arm64.s  issue-01-posix-arm64.s  issue-02-posix-arm64.s  issue-03-posix-arm64.s  issue-04-posix-arm64.s  issue-05-posix-arm64.s  issue-06-posix-arm64.s  issue-07-posix-arm64.s  issue-08-posix-arm64.s  issue-09-posix-arm64.s  lower-posix-arm64-test.cc  lower-posix-arm64.cc  lower-posix-arm64.h  yalx-lang-posix-arm64.s
src/backend/junk/: code-generate-arm64-test.cc  code-generate-arm64.h  code-generate-x64-test.cc  instruction-generating-x64.cc  instruction-generating-x64.h  issue-01-posix-arm64.s  issue-03-posix-x64.s  issue-05-posix-arm64.s  issue-07-posix-arm64.s  issue-08-posix-arm64.s  register-allocator-test.cc  register-allocator.h  yalx-lang-posix-arm64.s
src/backend/recycle/: instruction-generating-arm64.cc  instruction-generating-x64.cc  operand-allocator-test.cc  operand-allocator.h  stackslot-allocator-test.cc
src/backend/x64/: code-generate-x64-test.cc  code-generate-x64.cc  code-generate-x64.h  codegen-x64.cc  codegen-x64.h  instruction-codes-x64.h  instruction-generating-x64-test.cc  instruction-generating-x64.cc  instruction-generating-x64.h  issue-00-posix-x64.s  issue-01-posix-x64.s  issue-02-posix-x64.s  issue-03-posix-x64.s  linkage-symbols.cc  lower-posix-x64-test.cc  lower-posix-x64.cc  lower-posix-x64.h  yalx-lang-posix-x64.s
src/base/: arena-test.cc  arena-utils-test.cc  arena-utils.cc  arena-utils.h  arena.cc  arena.h  arenas-test.cc  arenas.cc  at-exit.cc  at-exit.h  base.cc  base.h  bit-field.h  bit-ops.h  checking.cc  checking.h  env-posix.cc  env-test.cc  env.cc  env.h  format.cc  format.h  hash.cc  hash.h  io-test.cc  io.cc  io.h  lazy-instance.h  printd.h  queue-macros.h  reference-count-test.cc  reference-count.h  sha256-test.cc  status-test.cc  status.cc  status.h  utils.h
src/compiler/: assembly-generating-delegate.h  ast-test.cc  ast-utils.cc  ast.cc  ast.h  compiler-suit-test.h  compiler-test.cc  compiler.cc  compiler.h  constants.cc  constants.h  deps-reaching.cc  generics-instantiating-test.cc  generics-instantiating.cc  generics-instantiating.h  global-symbol.h  lexer-test.cc  lexer.cc  lexer.h  node-test.cc  node.h  parser-test.cc  parser.cc  parser.h  scope.cc  scope.h  source-position-test.cc  source-position.h  syntax-feedback.h  token-test.cc  token.cc  token.h  type-reducer.cc  type-reducer.h  type-reducing-test.cc  type-reducing.cc  type-reducing.h
src/ir/: base-test.cc  base-test.h  codegen-test.cc  codegen.cc  codegen.h  condition.cc  condition.h  constants.cc  constants.h  ir-nodes.cc  ir-nodes.h  metadata-test.cc  metadata.cc  metadata.h  node-test.cc  node.cc  node.h  operator-test.cc  operator.cc  operator.h  operators-factory.h  runtime.cc  runtime.h  scope-test.cc  scope.cc  scope.h  source-position-test.cc  source-position.cc  source-position.h  type.cc  type.h  utils.cc  utils.h
src/ir/pass/: constants-folding-test.cc  constants-folding.cc  constants-folding.h  pass.cc  pass.h
src/runtime/: boot-drawin-x64.s  boot-linux-x64.s  boot-posix-arm64.s  boot-posix-x64.s  boot-stub-arm64.s  boot-x64.s  bootstrap-arm64.s  bootstrap-x64.s  checking.c  checking.h  collection-test.cc  collection.c  collection.h  daemon-test.cc  daemon.c  daemon.h  hash-table-test.cc  hash-table.c  hash-table.h  jobs-test.cc  jobs.c  jobs.h  locks-posix.c  locks-test.cc  locks.c  locks.h  macros.h  mm-thread-test.cc  mm-thread.c  mm-thread.h  platform-signal-drawin-arm64.c  platform-signal-linux-x64.c  platform-signal-linux.c  platform-signal.h  platform.h  process.c  process.h  root-handles-test.cc  root-handles.c  root-handles.h  (+24 more)
src/runtime/heap/: heap-test.cc  heap.c  heap.h  object-visitor.h  unwind-posix.c  unwind-windows.c  ygc-driver.c  ygc-driver.h  ygc-forwarding-test.cc  ygc-forwarding.c  ygc-forwarding.h  ygc-heap-test.cc  ygc-live-map-test.cc  ygc-live-map.c  ygc-live-map.h  ygc-mark-test.cc  ygc-mark.c  ygc-mark.h  ygc-physical-memory.c  ygc-platform-darwin.c  ygc-platform-linux.c  ygc-platform-test.cc  ygc-relocate.c  ygc-relocate.h  ygc-test.cc  ygc-virtual-memory-posix.c  ygc-virtual-memory.c  ygc.c  ygc.h
src/runtime/lxr/: block-test.cc  block.c  block.h  immix-heap-test.cc  immix-heap.c  (+5 more)
src/test/: all-tests.cc  gtest-all.cc
src/vm/: isolate.cc  isolate.h
src/x64/: asm-x64-test.cc  asm-x64.cc  asm-x64.h
xcode/: any-posix-arm64.s  constants.cc  test-stub-posix-arm64.s
xcode/yalx.xcodeproj/: project.pbxproj
xcode/yalx.xcworkspace/: contents.xcworkspacedata
(+104 files in other folders)
