cmake_minimum_required(VERSION 3.22)
project(yalx)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 11)
# set(CMAKE_C_FLAGS "/experimental:c11atomics ${CMAKE_C_FLAGS}")
# add_compile_definitions(GTEST_HAS_TR1_TUPLE=0)
enable_language(ASM)

include_directories(src)
include_directories(third-party/include)

add_library(runtime STATIC
        src/runtime/heap/heap.c
        src/runtime/heap/heap.h
        src/runtime/heap/object-visitor.h
        src/runtime/heap/unwind-posix.c
        src/runtime/thread-posix.c
        src/runtime/object/any.c
        src/runtime/object/any.h
        src/runtime/object/arrays.c
        src/runtime/object/arrays.h
        src/runtime/object/builtin-types.c
        src/runtime/object/number.c
        src/runtime/object/number.h
        src/runtime/object/throwable.c
        src/runtime/object/throwable.h
        src/runtime/object/type.c
        src/runtime/object/type.h
        src/runtime/object/yalx-string.c
        src/runtime/object/yalx-string.h
        src/runtime/checking.h
        src/runtime/hash-table.c
        src/runtime/hash-table.h
        src/runtime/locks.c
        src/runtime/locks.h
        src/runtime/macros.h
        src/runtime/process.c
        src/runtime/process.h
        src/runtime/runtime.c
        src/runtime/runtime.h
        src/runtime/scheduler.c
        src/runtime/scheduler.h
        src/runtime/stack.c
        src/runtime/stack.h
        src/runtime/thread.h
        src/runtime/thread-posix.c
        src/runtime/tls.h
        src/runtime/platform.h
        src/runtime/boot-linux-x64.s
        src/runtime/heap/ygc.h
        src/runtime/heap/ygc-platform-linux.c
        src/runtime/heap/ygc.c
        src/runtime/checking.c
        src/runtime/heap/ygc-physical-memory.c
        src/runtime/heap/ygc-virtual-memory.c
        src/runtime/heap/ygc-virtual-memory-posix.c
        src/runtime/heap/ygc-live-map.h
        src/runtime/heap/ygc-live-map.c
        src/runtime/daemon.h
        src/runtime/daemon.c
        src/runtime/mm-thread.h
        src/runtime/mm-thread.c
        src/runtime/heap/ygc-forwarding.h
        src/runtime/heap/ygc-forwarding.c
        src/runtime/jobs.h
        src/runtime/jobs.c
        src/runtime/heap/ygc-mark.h
        src/runtime/heap/ygc-mark.c
        src/runtime/heap/ygc-relocate.h
        src/runtime/heap/ygc-relocate.c
        src/runtime/root-handles.c
        src/runtime/root-handles.h
        src/runtime/heap/ygc-driver.h
        src/runtime/heap/ygc-driver.c
        src/runtime/utils.h
        src/runtime/utils-posix.c
        src/runtime/utils.c
        src/runtime/locks-posix.c
        src/runtime/platform-signal-linux-x64.c
        src/runtime/stubs-linux-x64.s src/runtime/platform-signal.h src/runtime/platform-signal-linux.c)

add_library(compiler STATIC
        src/arch/label.h
        src/arm64/asm-arm64.cc
        src/arm64/asm-arm64.h
        src/arm64/const-arm64.h
        src/arm64/instr-arm64.cc
        src/arm64/instr-arm64.h
        src/backend/arm64/instruction-codes-arm64.h
        src/backend/arm64/instruction-selector-arm64.cc
        src/backend/x64/instruction-codes-x64.h
        src/backend/x64/code-generate-x64.cc
        src/backend/x64/code-generate-x64.h
        src/backend/constants-pool.cc
        src/backend/constants-pool.h
        src/backend/frame.cc
        src/backend/frame.h
        src/backend/gnu-asm-generator.cc
        src/backend/gnu-asm-generator.h
        src/backend/instruction-code.cc
        src/backend/instruction-code.h
        src/backend/instruction-selector.cc
        src/backend/instruction-selector.h
        src/backend/instruction.cc
        src/backend/instruction.h
        src/backend/linkage-symbols.cc
        src/backend/linkage-symbols.h
        src/backend/machine-type.cc
        src/backend/machine-type.h
        src/backend/register-allocator.cc
        src/backend/register-allocator.h
        src/backend/registers-configuration.cc
        src/backend/registers-configuration.h
        src/base/arena-utils.cc
        src/base/arena-utils.h
        src/base/arena.cc
        src/base/arena.h
        src/base/at-exit.cc
        src/base/at-exit.h
        src/base/base.cc
        src/base/base.h
        src/base/bit-field.h
        src/base/bit-ops.h
        src/base/checking.cc
        src/base/checking.h
        src/base/crc32.c
        src/base/env.cc
        src/base/env.h
        src/base/format.cc
        src/base/format.h
        src/base/hash.cc
        src/base/hash.h
        src/base/io.cc
        src/base/io.h
        src/base/lazy-instance.h
        src/base/queue-macros.h
        src/base/reference-count.h
        src/base/sha256.c
        src/base/sha256.h
        src/base/status.cc
        src/base/status.h
        src/base/utils.h
        src/compiler/assembly-generating-delegate.h
        src/compiler/ast-utils.cc
        src/compiler/ast.cc
        src/compiler/ast.h
        src/compiler/compiler.cc
        src/compiler/compiler.h
        src/compiler/constants.cc
        src/compiler/constants.h
        src/compiler/deps-reaching.cc
        src/compiler/generics-instantiating.cc
        src/compiler/generics-instantiating.h
        src/compiler/global-symbol.h
        src/compiler/lexer.cc
        src/compiler/lexer.h
        src/compiler/node.h
        src/compiler/parser.cc
        src/compiler/parser.h
        src/compiler/scope.cc
        src/compiler/scope.h
        src/compiler/source-position.h
        src/compiler/syntax-feedback.h
        src/compiler/token.cc
        src/compiler/token.h
        src/compiler/type-reducing.cc
        src/ir/pass/constants-folding.cc
        src/ir/pass/constants-folding.h
        src/ir/pass/pass.cc
        src/ir/pass/pass.h
        src/ir/base-test.h
        src/ir/codegen.cc
        src/ir/codegen.h
        src/ir/condition.cc
        src/ir/condition.h
        src/ir/constants.cc
        src/ir/constants.h
        src/ir/metadata.cc
        src/ir/metadata.h
        src/ir/node.cc
        src/ir/node.h
        src/ir/operator.cc
        src/ir/operator.h
        src/ir/operators-factory.h
        src/ir/runtime.cc
        src/ir/runtime.h
        src/ir/scope.cc
        src/ir/scope.h
        src/ir/source-position.cc
        src/ir/source-position.h
        src/ir/type.cc
        src/ir/type.h
        src/ir/utils.cc
        src/ir/utils.h
        src/vm/bytecode/bytecode-array-builder.cc
        src/vm/bytecode/bytecode-array-builder.h
        src/vm/bytecode/bytecode.cc
        src/vm/bytecode/bytecode.h
        src/x64/asm-x64.cc
        src/x64/asm-x64.h
        third-party/include/dbg/dbg.h
        src/backend/x64/lower-posix-x64.h src/backend/x64/lower-posix-x64.cc)

add_executable(yalx-test
        src/arm64/asm-arm64-test.cc
        src/backend/code-generate-arch-test.cc
        src/backend/code-generate-arch-test.h
        src/backend/constants-pool-test.cc
        src/backend/instruction-selector-test.cc
        src/backend/instruction-selector-test.h
        src/backend/instruction-test.cc
        src/backend/linkage-symbols-test.cc
        src/base/arena-test.cc
        src/base/env-test.cc
        src/base/io-test.cc
        src/base/reference-count-test.cc
        src/base/sha256-test.cc
        src/base/status-test.cc
        src/compiler/ast-test.cc
        src/compiler/compiler-test.cc
        src/compiler/generics-instantiating-test.cc
        src/compiler/lexer-test.cc
        src/compiler/node-test.cc
        src/compiler/parser-test.cc
        src/compiler/source-position-test.cc
        src/compiler/token-test.cc
        src/compiler/type-reducing-test.cc
        src/ir/pass/constants-folding-test.cc
        src/ir/base-test.cc
        src/ir/base-test.h
        src/ir/codegen-test.cc
        src/ir/metadata-test.cc
        src/ir/node-test.cc
        src/ir/operator-test.cc
        src/ir/scope-test.cc
        src/ir/source-position-test.cc
        src/runtime/test-stub-linux-x64.s
        src/runtime/hash-table-test.cc
        src/runtime/locks-test.cc
        src/runtime/runtime-test.cc
        src/runtime/stack-test.cc
        src/runtime/heap/heap-test.cc
        src/runtime/heap/ygc-platform-test.cc
        src/runtime/object/number-test.cc
        src/runtime/object/type-test.cc
        src/test/all-tests.cc
        src/test/gtest-all.cc
        src/x64/asm-x64-test.cc
        third-party/include/gtest/gtest.h
        src/runtime/heap/ygc-test.cc
        src/runtime/heap/ygc-heap-test.cc
        src/runtime/heap/ygc-live-map-test.cc
        src/runtime/daemon-test.cc
        src/runtime/mm-thread-test.cc
        src/runtime/heap/ygc-forwarding-test.cc
        src/runtime/jobs-test.cc
        src/runtime/heap/ygc-mark-test.cc
        src/runtime/root-handles-test.cc src/backend/x64/lower-posix-x64-test.cc)


target_link_libraries(yalx-test compiler runtime pthread unwind m)